# humemdb

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml  things-to-do.md
.github/workflows/: build-docs.yml  deploy-docs.yml  generated-cypher.yml  publish-pypi.yml  test-examples.yml  test.yml
docs/: index.md
docs/development/: documentation.md  licensing.md  release.md
docs/examples/: 01_sql_basics.md  02_cypher_social_graph.md  03_vector_search.md  04_mixed_memory_workflow.md  05_csv_ingest.md  cypher.md  download_data.md  index.md  sql.md  vector.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: benchmarks.md  query-surfaces.md  routing.md  supported-syntax.md  transactions.md  vectors.md
docs/stylesheets/: extra.css
docs/tests/: index.md  test_db.md  test_vector.md
examples/: 01_sql_basics.py  02_cypher_social_graph.py  03_vector_search.py  04_mixed_memory_workflow.py  05_csv_ingest.py  README.md  download_data.py
scripts/: README.md
scripts/benchmarks/: README.md  csv_ingest.py  cypher_graph_path.py  duckdb_direct_read.py  routing_sweep.py  routing_threshold_report.py  run_phase13_real_vector_baselines.sh  translation_overhead.py  vector_query_steps.py  vector_search.py  vector_search_real.py  vector_search_real_sweep.py  vector_search_sweep.py  vector_search_tune_lancedb.py  vector_surface_runtime_attribution.py
tests/: support.py  test_cypher.py  test_cypher_frontend.py  test_cypher_tck_subset.py  test_db.py  test_import.py  test_planning.py  test_routing_benchmark_regression.py  test_routing_runtime.py  test_sql.py  test_translation_overhead_benchmark.py  test_vector.py  test_vector_api.py  test_vector_core.py  test_vector_queries.py
(+221 files in other folders)
